# nimble-example-minimal-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
src/include/example/: app.h  client.h  game.h  game_app.h  gamepad.h  host.h  input.h  render.h  simulation.h  sleep.h
src/lib/: CMakeLists.txt  app.c  client.c  cmake_gen.toml  game.c  game_app.c  gamepad.c  host.c  input.c  main.c  render.c  simulation.c  sleep.c
