cmake_minimum_required(VERSION 3.16.3)
project(nimble-snake C)
enable_testing()

add_subdirectory(deps/game-relay/client-c/src/lib)
add_subdirectory(deps/game-relay/serialize-c/src/lib)
add_subdirectory(deps/piot/assent-c/src/lib)
add_subdirectory(deps/piot/bit-array/src/lib)
add_subdirectory(deps/piot/blob-stream/src/lib)
add_subdirectory(deps/piot/clog/src/lib)
add_subdirectory(deps/piot/datagram-transport-c/src/lib)
add_subdirectory(deps/piot/datagram-transport-local/src/lib)
add_subdirectory(deps/piot/discoid-c/src/lib)
add_subdirectory(deps/piot/flood-c/src/lib)
add_subdirectory(deps/piot/hazy-c/src/lib)
add_subdirectory(deps/piot/imprint/src/lib)
add_subdirectory(deps/piot/lagometer-c/src/lib)
add_subdirectory(deps/piot/mash-c/src/lib)
add_subdirectory(deps/piot/monotonic-time-c/src/lib)
add_subdirectory(deps/piot/nimble/src/lib)
add_subdirectory(deps/piot/nimble-client-c/src/lib)
add_subdirectory(deps/piot/nimble-engine-client/src/lib)
add_subdirectory(deps/piot/nimble-serialize-c/src/lib)
add_subdirectory(deps/piot/nimble-server-lib/src/lib)
add_subdirectory(deps/piot/nimble-steps-c/src/lib)
add_subdirectory(deps/piot/nimble-steps-serialize-c/src/lib)
add_subdirectory(deps/piot/ordered-datagram-c/src/lib)
add_subdirectory(deps/piot/rectify-c/src/lib)
add_subdirectory(deps/piot/secure-random-c/src/lib)
add_subdirectory(deps/piot/seer-c/src/lib)
add_subdirectory(deps/piot/stats-c/src/lib)
add_subdirectory(deps/piot/time-tick-c/src/lib)
add_subdirectory(deps/piot/tiny-libc/src/lib)
add_subdirectory(deps/piot/transmute-c/src/lib)
add_subdirectory(deps/piot/transport-stack/src/lib)
add_subdirectory(deps/piot/udp-client-c/src/lib)
add_subdirectory(deps/piot/udp-connections-client-c/src/lib)
add_subdirectory(deps/piot/udp-connections-serialize/src/lib)
add_subdirectory(deps/piot/udp-server-c/src/lib)
add_subdirectory(deps/piot/udp-server-connections/src/lib)


add_subdirectory(src)
